<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_url_default"
        android:summary="@string/pref_url_default"
        android:key="@string/pref_url_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="URL" />

    <ListPreference
        android:defaultValue="@string/pref_freq_once_value"
        android:summary="@string/pref_freq_once_label"
        android:entries="@array/pref_freq_option_labels"
        android:entryValues="@array/pref_freq_option_values"
        android:key="@string/pref_freq_key"
        android:title="@string/pref_freq_label" />

    <SwitchPreference
        android:defaultValue="false"
        android:summaryOff="Disabled"
        android:summaryOn="Enabled"
        android:key="@string/pref_enable_key"
        android:title="@string/pref_enable_title" />

</PreferenceScreen>